C2LC-173: Update position of the connect button with grid positioning

--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -1,6 +1,9 @@
 @import 'variables';
 
 .DeviceConnectControl {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    justify-self: end;
     z-index: inherit;
 }
 
