--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 body {
-    overflow-y: scroll;
+    overflow: hidden;
 }
 
 .App__header {
@@ -29,25 +29,8 @@ body {
     margin-top: 1.5rem;
 }
 
-.App__program-section--no-bluetooth-warning {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
-
 .App__command-palette {
     height: 100%;
-    padding: 1rem 0;
-    background-color: #F1F1F1;
-    text-align: center;
-}
-
-.App__command-palette--no-bluetooth-warning {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
     padding: 1rem 0;
     background-color: #F1F1F1;
     text-align: center;
