C2LC-173: Use padding to give empty spaces on top and bottow of the program sequence, instead of using grid layout

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -84,13 +84,11 @@ button.btn.ProgramBlockEditor__editor-action-button--pressed.ProgramBlockEditor_
     background: #FFF;
     overflow: scroll;
     padding-left: 2rem;
-    display: grid;
-    grid-template-rows: 5rem auto;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .ProgramBlockEditor__program-sequence {
-    grid-row-start: 2;
-    grid-row-end: 3;
     display: flex;
     justify-content: flex-start;
     align-items: center;
