C2LC-180: Add hover style for AddNode component

--- a/src/AddNode.scss
+++ b/src/AddNode.scss
@@ -19,6 +19,11 @@ button.btn.AddNode__expanded-button {
     padding: $addNodeExpandedButtonPadding;
 }
 
+button.btn.AddNode__expanded-button:hover {
+    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
+    background-color: #e5e5e5;
+}
+
 .AddNode--is-dragging-command .AddNode__expanded-button {
     pointer-events: none;
 }
