--- a/src/AddNodeToggleSwitch.scss
+++ b/src/AddNodeToggleSwitch.scss
@@ -1,14 +1,12 @@
 @import 'variables';
 
 .AddNodeToggleSwitch {
-    float: left;
-    margin-top: 1rem;
-    margin-right: 0.5rem;
-    width: 3.6rem;
-    max-height: 2rem;
+    width: 4.2rem;
+    max-height: 2.4rem;
     background: #c4c4c4;
-    border-radius: 1rem;
+    border-radius: 1.2rem;
     padding: 0.2rem;
+    display: inline-block;
 }
 
 .AddNodeToggleSwitch:focus {
@@ -21,18 +19,19 @@
 }
 
 .AddNodeToggleSwitch--checked > div {
-    margin-left: 1.6rem;
+    margin-left: 1.8rem;
 }
 
 .AddNodeToggleSwitch__switch-inner-circle {
     background: #F1F1F1;
-    height: 1.6rem;
-    width: 1.6rem;
     border-radius: 50%;
-    padding: 0.3rem;
+    padding: 0.2rem;
+    display: inline-block;
 }
 
 .AddNodeToggleSwitch__switch-inner-circle svg {
+    height: 1.6rem;
+    width: 1.6rem;
     display: block;
     stroke: #000;
 }
