--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -27,11 +27,11 @@
     justify-self: end;
     grid-column-start: 2;
     grid-column-end: 3;
-    padding-right: 1rem;
-    padding-top: 1rem;
+    margin: auto 1rem auto 0;
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button {
+    vertical-align: top;
     margin-left: 50px;
     border: 1px solid #FFF;
     border-radius: 50%;
