--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -21,3 +21,8 @@ $c2lc-focus-indicator-width: 0.2rem;
 /* Hover Indicator */
 
 $c2lc-hover-indicator-width: 0.1rem;
+
+/* Action Panel */
+
+$c2lc-action-panel-width: 16rem;
+$c2lc-action-panel-height: 5rem;
