C2LC-173: Change ActionPanel option buttons from Button to AriaDisablingButton, and disable moveToPreviousStep and moveToNextStep buttons when swapping position is not possible

--- a/src/ActionPanel.scss
+++ b/src/ActionPanel.scss
@@ -47,6 +47,11 @@ button.btn.ActionPanel__action-buttons {
     padding: 0.3rem;
 }
 
+button.btn.ActionPanel__action-buttons--disabled {
+    opacity: 30%;
+}
+
+
 .ActionPanel__action-button-svg {
     position: relative;
     margin: auto;
