--- a/src/DeviceConnectControl.scss
+++ b/src/DeviceConnectControl.scss
@@ -5,6 +5,7 @@
     grid-column-end: 3;
     justify-self: end;
     z-index: inherit;
+    display: inline-block;
 }
 
 button.btn-primary.DeviceConnectControl__button {
