--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -31,6 +31,14 @@
     padding-top: 1rem;
 }
 
+.ProgramBlockEditor__addNode {
+    float: left;
+}
+
+.ProgramBlockEditor__addNode--checked {
+    background: #000;
+}
+
 button.btn.ProgramBlockEditor__program-deleteAll-button {
     margin-left: 50px;
     border: 1px solid #FFF;
