--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,10 @@ body {
     margin-top: 1.5rem;
 }
 
+.App__scene-container {
+    margin-top: 1.5rem;
+}
+
 .App__program-section {
     margin-top: 1.5rem;
 }
