C2LC-194: Update Scene to have 9by5 ratio respect to character's width

--- a/src/RobotCharacter.scss
+++ b/src/RobotCharacter.scss
@@ -1,10 +1,10 @@
 @import 'variables';
 
-.Character {
-    stroke-width: 1;
+.RobotCharacter {
+    stroke-width: 0;
 }
 
-.Character__container {
+.RobotCharacter__container {
     stroke: #777777;
     stroke-width: 1;
     fill: none;
