--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -4,14 +4,11 @@
     display: inline-block;
     box-sizing: border-box;
     width: 100%;
-    height: 30rem;
+    height: 55.5%;
     border: 0.1rem solid #555;
 }
 
 .Scene__svg {
     width: 100%;
     height: 100%;
-    stroke: #222;
-    stroke-width: 3;
-    stroke-linecap: round;
 }
