--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -116,6 +116,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     border-radius: 50%;
     padding: 0.5rem;
     background-color: #FFF;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);
 }
 
 .ProgramBlockEditor__chracter-column-character {
