C2LC-194: Add new variables used to set width and height of the scene componenet

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -26,3 +26,9 @@ $c2lc-hover-indicator-width: 0.1rem;
 
 $c2lc-action-panel-width: 16rem;
 $c2lc-action-panel-height: 5rem;
+
+/* Scene */
+
+$c2lc-scene-tile-num-row: 5;
+$c2lc-scene-tile-num-column: 9;
+$c2lc-scene-tile-width: 100;
