C2LC-194: Use scss variable to move character with distance equal to Scene component's tile size

--- a/src/App.scss
+++ b/src/App.scss
@@ -59,3 +59,7 @@ body {
 .App__command-palette-command {
     margin-top: 1rem;
 }
+
+:export {
+    characterMovementLength: $c2lc-scene-tile-width;
+}
