--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -4,7 +4,7 @@
     display: inline-block;
     box-sizing: border-box;
     width: 100%;
-    height: 55.5%;
+    height: auto;
     border: 0.1rem solid #555;
 }
 
