C2LC-194: Update name used for scss variable for Scene

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,5 +61,5 @@ body {
 }
 
 :export {
-    characterMovementLength: $c2lc-scene-tile-width;
+    sceneGridCellWidth: $c2lc-scene-grid-cell-width;
 }
