C2LC-195: Add 9by5 grid to the Scene

--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -8,9 +8,17 @@
     border: 0.1rem solid #555;
 }
 
+.Scene__grid-line {
+    stroke: #DDD;
+    stroke-width: 1;
+}
+
 :export {
     sceneMinX: -$c2lc-scene-grid-cell-num-column * $c2lc-scene-grid-cell-width / 2;
     sceneMinY: -$c2lc-scene-grid-cell-num-row * $c2lc-scene-grid-cell-width / 2;
     sceneWidth: $c2lc-scene-grid-cell-num-column * $c2lc-scene-grid-cell-width;
     sceneHeight: $c2lc-scene-grid-cell-num-row * $c2lc-scene-grid-cell-width;
+    numRow: $c2lc-scene-grid-cell-num-row;
+    numColumn: $c2lc-scene-grid-cell-num-column;
+    gridCellWidth: $c2lc-scene-grid-cell-width;
 }
