--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,16 @@ body {
     margin-top: 1.5rem;
 }
 
+.App__scene-controls {
+    height: 4rem;
+    background-color: #F1F1F1;
+    border-width: 0 0.1rem 0.1rem 0.1rem;
+    border-color: #555;
+    border-style: solid;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .App__program-section {
     margin-top: 1.5rem;
 }
