C2LC-199: Draw the RobotCharacter's path with SVG line elements

--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -7,3 +7,9 @@
     height: auto;
     border: 0.1rem solid #555;
 }
+
+.Scene__path-line {
+    stroke: #222;
+    stroke-width: 3;
+    stroke-linecap: round;
+}
