--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -1,5 +1,11 @@
 @import 'variables';
 
+.PlayButton-container {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    justify-self: center;
+}
+
 .PlayButton-svg {
     fill: #000;
     width: 1.7rem;
