--- a/src/Scene.scss
+++ b/src/Scene.scss
@@ -5,4 +5,7 @@
     box-sizing: border-box;
     width: 100%;
     height: auto;
+    border-width: 0.1rem 0.1rem 0 0.1rem;
+    border-color: #555;
+    border-style: solid;
 }
