C2LC-200: Add checked style for PenDownToggleSwitch

--- a/src/PenDownToggleSwitch.scss
+++ b/src/PenDownToggleSwitch.scss
@@ -3,3 +3,7 @@
 .PenDownToggleSwitch:focus {
     box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
 }
+
+.PenDownToggleSwitch.ToggleSwitch--checked {
+    background: #000;
+}
