--- a/src/App.scss
+++ b/src/App.scss
@@ -46,19 +46,27 @@ body {
     border-color: $c2lc-scene-border-color;
     border-style: $c2lc-scene-border-style;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .App__playButton-container {
     grid-column-start: 2;
     grid-column-end: 3;
-    justify-self: center;
+    padding-right: 1rem;
+    justify-self: end;
+}
+
+.App__refreshButton-container {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    padding-left: 1rem;
+    justify-self: start;
 }
 
 .App__penDown-toggle-switch-container {
     display: flex;
-    grid-column-start: 3;
-    grid-column-end: 4;
+    grid-column-start: 4;
+    grid-column-end: 5;
     justify-self: end;
     align-items: center;
     padding-right: 1rem;
