C2LC-239: Update comments for Dash removal

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,9 +27,11 @@ body {
     margin: 1rem 0;
 }
 
+/* Dash connection removed for version 0.5
 .App__audio-toggle-switch {
     margin-right: 1.5rem;
 }
+*/
 
 .App__bluetooth-api-warning-section {
     margin-top: 1.5rem;
