--- a/src/RefreshButton.scss
+++ b/src/RefreshButton.scss
@@ -10,8 +10,7 @@ button.btn.RefreshButton svg {
 }
 
 button.btn.RefreshButton {
-    margin-top: 0.5rem;
-    padding: 0.6rem 0.6rem 0.6rem 0.6rem;
+    padding: 0.5rem;
     border: 1px solid #FFF;
     border-radius: 50%;
     background-color: #FFF;
