--- a/src/ProgramSpeedController.scss
+++ b/src/ProgramSpeedController.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-top: 3rem;
 }
 
 .ProgramSpeedController__slider {
