--- a/src/ShareButton.css
+++ b/src/ShareButton.css
@@ -1,3 +1,6 @@
 .ShareButton {
-    margin-top: 2.25rem;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    margin-top: 3rem;
 }
