--- a/src/App.scss
+++ b/src/App.scss
@@ -88,15 +88,30 @@ body {
     grid-gap: 1rem;
 }
 
+.App__playAndShare-container {
+    height: 10rem;
+    margin-top: 1rem;
+    background-color: #F1F1F1;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
+
 .App__playControl-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1rem;
-    background-color: #F1F1F1;
     padding: 0.5rem;
+    grid-column-start: 2;
 }
 
 .App__playButton-container {
     margin-bottom: 1rem;
+}
+
+.App__shareButton-container {
+    display: flex;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    justify-content: flex-end;
 }
