--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,6 +10,8 @@ $c2lc-focus-indicator-color: #000000;
 
 $c2lc-disabled-color: #777777;
 
+$c2lc-container-color: #AAD5CF;
+
 /* Borders */
 
 $c2lc-button-border-width: 2px;
