--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,8 @@ html {
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    background-color: #171C1C;
+    background-image: url('./svg/SpaceBackground.svg');
 }
 
 button.btn {
