--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 
 .ProgramBlockEditor__container {
-    background: #F1F1F1;
+    background: $c2lc-container-color;
     display: grid;
     height: 100%;
     grid-template-columns: 6rem auto;
