C2LC-248: Fixed layout of share button.

--- a/src/App.scss
+++ b/src/App.scss
@@ -110,8 +110,11 @@ body {
 }
 
 .App__shareButton-container {
+    align-items: flex-end;
     display: flex;
+    flex-direction: column;
     grid-column-start: 3;
     grid-column-end: 4;
-    justify-content: flex-end;
+    justify-content: center;
+    padding-right: 2rem;
 }
