C2LC-249: Work in progress

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ body {
     width: 80%;
     padding: 1rem 2rem 3rem 3rem;
     margin: auto;
-    background-color: #171C1C;
+    background-color: #496D69;
 }
 
 .App__header {
@@ -20,6 +20,10 @@ body {
     color: #FFF;
     padding: 0.5rem 3rem;
 }
+
+// .App__title {
+
+// }
 
 .App__header-row {
     justify-content: space-between;
