--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,7 +10,7 @@ $c2lc-focus-indicator-color: #000000;
 
 $c2lc-disabled-color: #777777;
 
-$c2lc-container-color: #AAD5CF;
+$c2lc-container-color: #CCE6E2;
 
 /* Borders */
 
