--- a/src/index.scss
+++ b/src/index.scss
@@ -29,8 +29,8 @@ html {
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #171C1C;
-    background-image: url('./svg/SpaceBackground.svg');
+    background-color: #49827A;
+    background-image: url('./svg/ForestBackground.svg');
 }
 
 button.btn {
