C2LC-249: Add background-size for the forest theme only

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,7 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #49827A;
     background-image: url('./svg/ForestBackground.svg');
+    background-size: 13%;
 }
 
 button.btn {
