--- a/src/App.scss
+++ b/src/App.scss
@@ -13,12 +13,14 @@ body {
 }
 
 .App__header {
-    width: 80%;
-    margin: auto;
     display: flex;
-    background: #000;
     color: #FFF;
-    padding: 0.5rem 3rem;
+}
+
+.App__title {
+    width: 80%;
+    background-color: #000;
+    padding: 0.5rem 2rem 0.5rem 3rem;
 }
 
 .App__header-row {
