C2LC-249: Specify grid-column end

--- a/src/App.scss
+++ b/src/App.scss
@@ -113,6 +113,7 @@ body {
     align-items: center;
     padding: 0.5rem;
     grid-column-start: 2;
+    grid-column-end: 3;
 }
 
 .App__playButton-container {
