C2LC-260: Fix typos in ConfirmDeleteAll component

--- a/src/ConfirmDeleteAllModal.css
+++ b/src/ConfirmDeleteAllModal.css
@@ -1,15 +1,15 @@
-.ConfrimDeleteAllModal {
+.ConfirmDeleteAllModal {
     width: 35rem;
     margin: auto;
 }
 
-.ConfrimDeleteAllModal__content {
+.ConfirmDeleteAllModal__content {
     display: grid;
     grid-template-rows: 1fr 1fr;
     padding: 3rem 4rem;
 }
 
-.ConfrimDeleteAllModal__header {
+.ConfirmDeleteAllModal__header {
     font-weight: bold;
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -18,14 +18,14 @@
     margin-top: 2rem;
 }
 
-.ConfrimDeleteAllModal__warning-svg {
+.ConfirmDeleteAllModal__warning-svg {
     grid-column-start: 1;
     grid-column-end: 2;
     width: 2rem;
     height: 2rem;
 }
 
-.ConfrimDeleteAllModal__footer {
+.ConfirmDeleteAllModal__footer {
     grid-row-start: 2;
     grid-row-end: 3;
     grid-row-start: 2;
@@ -37,21 +37,20 @@
     align-items: center;
 }
 
-.ConfrimDeleteAllModal__option-button {
+.ConfirmDeleteAllModal__option-button {
     width: 11rem;
     margin-bottom: 1.5rem;
 }
 
 @media only screen and (max-width: 991px) {
-    .ConfrimDeleteAllModal__footer {
-        display: flex;
+    .ConfirmDeleteAllModal__footer {
         flex-direction: column;
         margin: auto;
     }
 }
 
 @media only screen and (max-width: 575px) {
-    .ConfrimDeleteAllModal {
+    .ConfirmDeleteAllModal {
         width: 22rem;
     }
 }
