C2LC-203: Update layout to render StopButton next to PlayButton

--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -17,6 +17,7 @@ button.btn.PlayButton--disabled svg {
 
 button.btn.PlayButton {
     margin-top: 0.5rem;
+    margin-right: 1.5rem;
     padding: 0.6rem 0.45rem 0.6rem 0.75rem;
     border: 1px solid #FFF;
     border-radius: 50%;
